[gd_scene load_steps=22 format=3 uid="uid://kg6lb726rgpa"]

[ext_resource type="Script" uid="uid://c2b4ca5poyit1" path="res://lessons_reference/01_standard/player/player.gd" id="1_8cq21"]
[ext_resource type="Texture2D" uid="uid://bw03btxpkxde4" path="res://player/godot_bottom.png" id="3_0kuyu"]
[ext_resource type="Script" uid="uid://cew88pjgkk240" path="res://lessons_reference/01_standard/player/godot_armor.gd" id="4_gergj"]
[ext_resource type="PackedScene" uid="uid://u2e0ge3w0mb5" path="res://lessons_reference/01_standard/weapons/basic_fire.tscn" id="5_87u7t"]
[ext_resource type="Script" uid="uid://buvpn0brcx2no" path="res://lessons_reference/01_standard/player/weapon_pivot.gd" id="5_xb1o6"]
[ext_resource type="Texture2D" uid="uid://dekkcmj408pvt" path="res://player/hand_fire.png" id="6_bivqd"]
[ext_resource type="PackedScene" uid="uid://5ays6kuo0xio" path="res://common/shadow.tscn" id="7_w0lmv"]
[ext_resource type="AudioStream" uid="uid://c6bk7awsqnbt8" path="res://player/pain_01.wav" id="8_i3sfw"]
[ext_resource type="AudioStream" uid="uid://deol7mqpv4xhy" path="res://player/pain_02.wav" id="9_1uopt"]
[ext_resource type="AudioStream" uid="uid://bv2sasgvsrp4i" path="res://player/pain_03.wav" id="10_p2rke"]
[ext_resource type="AudioStream" uid="uid://17y53e55al8d" path="res://player/pain_04.wav" id="11_8y5ct"]
[ext_resource type="AudioStream" uid="uid://dgdkinlpjq4ob" path="res://player/pain_05.wav" id="12_pd17w"]
[ext_resource type="AudioStream" uid="uid://ursqvcxb3uov" path="res://player/death_01.wav" id="13_5qmux"]
[ext_resource type="AudioStream" uid="uid://b3w6lv1kglxf6" path="res://player/death_02.wav" id="14_obhsm"]
[ext_resource type="AudioStream" uid="uid://c56hqbbb5ktp1" path="res://player/death_03.wav" id="15_4lunt"]
[ext_resource type="Texture2D" uid="uid://206pnoc2labm" path="res://ui/bars/health_point.png" id="16_ybjo0"]

[sub_resource type="CircleShape2D" id="1"]
radius = 19.0754

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_28x1b"]
random_pitch = 1.03
streams_count = 5
stream_0/stream = ExtResource("8_i3sfw")
stream_1/stream = ExtResource("9_1uopt")
stream_2/stream = ExtResource("10_p2rke")
stream_3/stream = ExtResource("11_8y5ct")
stream_4/stream = ExtResource("12_pd17w")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_4jtnk"]
random_pitch = 1.03
streams_count = 3
stream_0/stream = ExtResource("13_5qmux")
stream_1/stream = ExtResource("14_obhsm")
stream_2/stream = ExtResource("15_4lunt")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1l3ip"]
bg_color = Color(0.107246, 0.142187, 0.137933, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tyuhx"]
texture = ExtResource("16_ybjo0")
texture_margin_left = 4.0
texture_margin_top = 16.2304
texture_margin_right = 4.0
texture_margin_bottom = 8.18285

[node name="Player" type="CharacterBody2D"]
collision_mask = 66
motion_mode = 1
script = ExtResource("1_8cq21")

[node name="GodotArmor" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(-0.474655, 0)
texture = ExtResource("3_0kuyu")
offset = Vector2(0.474655, -40.5866)
script = ExtResource("4_gergj")

[node name="WeaponPivot" type="Node2D" parent="."]
unique_name_in_owner = true
z_index = 1
position = Vector2(0, -36)
script = ExtResource("5_xb1o6")

[node name="WeaponAnchor" type="Marker2D" parent="WeaponPivot"]
unique_name_in_owner = true
position = Vector2(66, 0)

[node name="BasicFire" parent="WeaponPivot/WeaponAnchor" instance=ExtResource("5_87u7t")]

[node name="HandLeft" type="Sprite2D" parent="WeaponPivot/WeaponAnchor"]
unique_name_in_owner = true
position = Vector2(11.3001, -24.0404)
rotation = -0.07199
texture = ExtResource("6_bivqd")

[node name="HandRight" type="Sprite2D" parent="WeaponPivot/WeaponAnchor"]
unique_name_in_owner = true
position = Vector2(7.30013, 28.9596)
rotation = 0.33056
texture = ExtResource("6_bivqd")
flip_v = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="WeaponPivot"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
z_index = 2
shape = SubResource("1")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -40.5866)

[node name="Shadow" parent="." instance=ExtResource("7_w0lmv")]
position = Vector2(0, 34.4444)

[node name="DamageAudio" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_28x1b")

[node name="DieAudio" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_4jtnk")

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
z_index = 5
offset_left = -69.0
offset_top = -141.0
offset_right = 68.0
offset_bottom = -116.587
theme_override_styles/background = SubResource("StyleBoxFlat_1l3ip")
theme_override_styles/fill = SubResource("StyleBoxTexture_tyuhx")
value = 69.6
show_percentage = false
